--- a/params_planck.ini
+++ b/params_planck.ini
@@ -85,4 +85,7 @@ param[yhe] = 0.24 0.24 0.24 0 0
 param[alpha1] = 0 0 0 0 0
 param[deltazrei] = 0.5 0.5 0.5 0 0
 param[Alens] = 1 1 1 0 0
+
+#CosmoRec dark matter annihilation parameter, 0910.3663
+#Compile with CosmoRec to use this; note fdm has units of 1e-23.
 param[fdm] = 0 0 0 0 0
