--- a/batch1/base_w.ini
+++ b/batch1/base_w.ini
@@ -32,3 +32,5 @@ param[yhe] = 0.24 0.24 0.24 0 0
 param[alpha1] = 0 0 0 0 0
 param[deltazrei] = 0.5 0.5 0.5 0 0
 param[Alens] = 1 1 1 0 0
+param[fdm] = 0 0 0 0 0
+
