--- a/batch1/getdist_common_batch1.ini
+++ b/batch1/getdist_common_batch1.ini
@@ -94,7 +94,7 @@ plotparams = omegabh2 omegadmh2 tau ns
 marker[nrun] = 0
 
 #Need to give limits if prior cuts off distribution where not very small
-limits[tau] = 0.01 N
+#limits[tau] = 0.01 N
 limits[fnu] = 0 N
 limits[w] = -1 N
 limits[r]= 0 N
@@ -104,7 +104,7 @@ limits[r10]= 0 N
 limits[mnu]= 0 N
 limits[omeganuh2]= 0 N
 limits[fdm]= 0 N
-
+limits[deltazrei]=0.5 2.5
 
 #all_limits sets all limitsxx for all variables to the same; can be useful for bins
 all_limits = 
