--- a/params_CAMspec.ini
+++ b/params_CAMspec.ini
@@ -16,7 +16,7 @@ feedback = 1
 temperature = 1
 
 #clik likelihood file
-clik_likefile = /home/hamann/plonk/clik/data/CAMspec_v4.1.clik
+clik_likefile = /path/to/CAMspec_v4.1.clik
 
 #filenames for CMB datasets and SZ templates (added to C_l times parameter(13))
 #Note you may need to change lmax in cmbtypes.f90 to use small scales (e.g. lmax=2100)
@@ -211,7 +211,7 @@ param[nrun] = 0 0 0 0 0
 param[logA] = 3.108 2.7 4 0.001 0.001
 param[r] = 0 0 0 0 0
 #SZ amplitude, as in WMAP analysis
-param[asz]= 1 0 2 0.4 0.4
+param[asz]= 0 0 0 0 0
 
 #CAMspec nuisance parameters
 param[aps100] = 18 0 20 .5 .5
