--- a/params_PLik.ini
+++ b/params_PLik.ini
@@ -16,7 +16,7 @@ feedback = 1
 temperature = 1
 
 #clik likelihood file
-clik_likefile = /home/hamann/plonk/clik/data/plik_v2.clik
+clik_likefile = /path/to/plik_v2.clik
 
 #filenames for CMB datasets and SZ templates (added to C_l times parameter(13))
 #Note you may need to change lmax in cmbtypes.f90 to use small scales (e.g. lmax=2100)
@@ -211,20 +211,20 @@ param[nrun] = 0 0 0 0 0
 param[logA] = 3.108 2.7 4 0.001 0.001
 param[r] = 0 0 0 0 0
 #SZ amplitude, as in WMAP analysis
-param[asz]= 1 0 2 0.4 0.4
+param[asz]= 0 0 0 0 0
 
 #CAMspec nuisance parameters
-param[aps100] = 18 0 20 0 0
-param[aps143] = 10 0 30 0 0
-param[aps217] = 20 0 50 0 0
-param[acib143] = 1 0 5 0 0
-param[acib217] = 20 0 80 0 0
-param[asz143] = 1 0 3 0 0
-param[psr] = 0.5 0.0 1.0 0 0
-param[cibr] = 0.5 0.0 1.0 0 0
-param[cal0] = 1.0 0.98 1.02 0 0
+param[aps100] = 18 18 18 0 0
+param[aps143] = 10 10 10 0 0
+param[aps217] = 20 20 20 0 0
+param[acib143] = 1 1 1 0 0
+param[acib217] = 20 20 20 0 0
+param[asz143] = 1 1 1 0 0
+param[psr] =  1 1 1 0 0
+param[cibr] = 1 1 1 0 0
+param[cal0] = 1.0 1.0 1.0 0 0
 param[cal1] = 1.0 1.0 1.0 0 0
-param[cal2] = 1.0 0.98 1.02 0 0
+param[cal2] = 1.0 1.0 1.0 0 0
 
 #PLik nuisance parameters
 param[norm_rg] = 61 0 100 1 1
