change fnu to mnu, omdmh2 to omch2

--- a/batch1/base_w.ini
+++ b/batch1/base_w.ini
@@ -1,5 +1,6 @@
 
 INCLUDE(common_batch1.ini)
+INCLUDE(baseline_neutrinos.ini)
 
 #Root name for files produced
 file_root = test_HST_base_w
@@ -11,7 +12,7 @@ use_SN = F
 
 #Can use covariance matrix for proposal density, otherwise use settings below
 #Covariance matrix can be produced using getdist program.
-propose_matrix = planck.covmat
+propose_matrix = planck_CAMspec.covmat
 
 #If we are including tensors
 compute_tensors = F
@@ -19,7 +20,6 @@ compute_tensors = F
 #parameter start center, min, max, start width, st. dev. estimate
 
 param[omegak] = 0 0 0 0 0
-param[fnu] = 0 0 0 0 0
 param[nt] = 0 0 0 0 0
 param[nrun] = 0 0 0 0 0
 param[r] = 0 0 0 0 0
