--- a/batch1/common_batch1.ini
+++ b/batch1/common_batch1.ini
@@ -6,32 +6,12 @@ local_dir = %LOCALDIR%
 #directory, e.g. window functions in directory windows under data_dir
 data_dir = %LOCALDIR%data/
 
-use_Age_Tophat_Prior = T
 
-
-#filenames for CMB datasets and SZ templates (added to C_l times parameter(13))
-#Note you may need to change lmax in cmbtypes.f90 to use small scales (e.g. lmax=2100)
-cmb_numdatasets = 1
-cmb_dataset1 = %DATASETDIR%Planck.dataset
-
-#filename for supernovae (default SDSS compilation)
-SN_filename = %DATASETDIR%supernovae.dataset
-
-#filenames for matter power spectrum datasets, incl twodf
-mpk_numdatasets = 1
-mpk_dataset1 = %DATASETDIR%sdss_lrgDR4.dataset
-
-
-#if true, use HALOFIT for non-linear corrections (astro-ph/0207664).
-#note lyman-alpha (lya) code assumes linear spectrum
-nonlinear_pk = F
-
+INCLUDE(likelihood_batch1.ini)
 
 #Feedback level ( 2=lots,1=chatty,0=none)
 feedback = 1
 
-
-use_CMB = T
 #Force computation of sigma_8 even if use_mpk = F
 get_sigma8 = F
 
@@ -42,7 +22,7 @@ inflation_consistency = T
 bbn_consistency=T 
 
 param[omegabh2] = 0.0222 0.005 0.1 0.0003 0.0002
-param[omegadmh2] = 0.12 0.001 0.99 0.003 0.002
+param[omegach2] = 0.12 0.001 0.99 0.003 0.002
 param[theta] = 1.0414 0.5 10 0.001 0.0004
 param[tau] = 0.09 0.01 0.8 0.02 0.01
 
@@ -58,7 +38,7 @@ param[asz]= 0 0 0 0 0
 temperature = 1
 
 #Maximum number of chain steps
-samples = 100000
+samples = 1000000
 
 #use fast-slow parameter distinctions to speed up 
 #(note for basic models WMAP3 code is only ~3x as fast as CAMB)
@@ -143,11 +123,6 @@ estimate_propose_matrix = F
 
 #Tolerance on log likelihood to use when estimating best fit point
 delta_loglike = 2
-
-
-use_lya = F
-use_clusters = F
-use_min_zre = 0
 
 #if blank this is set from system clock
 rand_seed = 
