--- a/params_CAMspec.ini
+++ b/params_CAMspec.ini
@@ -20,7 +20,7 @@ clik_likefile = /path/to/CAMspec_v4.1.clik
 
 #filenames for CMB datasets and SZ templates (added to C_l times parameter(13))
 #Note you may need to change lmax in cmbtypes.f90 to use small scales (e.g. lmax=2100)
-cmb_numdatasets = 1
+cmb_numdatasets = 0
 cmb_dataset1 = WMAP
 cmb_dataset_SZ1 = data/WMAP_SZ_VBand.dat
 cmb_dataset_SZ_scale1 = 1
@@ -50,7 +50,7 @@ bao_dataset2 = data/sdss_bao.dataset
 #note lyman-alpha (lya) code assumes linear spectrum
 nonlinear_pk = F
 
-use_CMB = F
+use_CMB = T
 use_clik = T
 use_HST = F
 use_mpk = F
@@ -188,12 +188,13 @@ redo_likeoffset =  0
 
 #parameter start center, min, max, start width, st. dev. estimate
 param[omegabh2] = 0.0221 0.005 0.1 0.0003 0.0003
-param[omegadmh2] = 0.115 0.001 0.99 0.003 0.003
+param[omegach2] = 0.115 0.001 0.99 0.003 0.003
 param[theta] = 1.036 0.5 10 0.001 0.001
 param[tau] = 0.09 0.01 0.8 0.02 0.02
 
 param[omegak] = 0 0 0 0 0
-param[fnu] = 0 0 0 0 0
+num_massive_neutrinos=1
+param[mnu] = 0.056 0.056 0.056 0 0
 param[w] = -1 -1 -1 0 0
 param[wa] = 0 0 0 0 0
 param[nnu] = 3.046 3.046 3.046 0 0
