--- a/params_planck.ini
+++ b/params_planck.ini
@@ -58,13 +58,15 @@ bbn_consistency=T
 #parameter start center, min, max, start width, st. dev. estimate
 
 param[omegabh2] = 0.0222 0.005 0.1 0.0003 0.0002
-param[omegadmh2] = 0.12 0.001 0.99 0.003 0.002
+param[omegach2] = 0.12 0.001 0.99 0.003 0.002
 param[theta] = 1.0414 0.5 10 0.001 0.0004
 param[tau] = 0.09 0.01 0.8 0.02 0.01
 
 
 param[omegak] = 0 0 0 0 0
-param[fnu] = 0 0 0 0 0
+
+num_massive_neutrinos=1
+param[mnu] = 0.056 0.056 0.056 0 0
 param[w] = -1 -1 -1 0 0
 
 param[ns] = 0.96 0.9 1.1 0.005 0.004
