mnu=0.06 now, links to baseline_neutrino.ini

--- a/params_CAMspec.ini
+++ b/params_CAMspec.ini
@@ -193,8 +193,9 @@ param[theta] = 1.036 0.5 10 0.001 0.001
 param[tau] = 0.09 0.01 0.8 0.02 0.02
 
 param[omegak] = 0 0 0 0 0
-num_massive_neutrinos=1
-param[mnu] = 0.056 0.056 0.056 0 0
+
+INCLUDE(batch1/baseline_neutrinos.ini)
+
 param[w] = -1 -1 -1 0 0
 param[wa] = 0 0 0 0 0
 param[nnu] = 3.046 3.046 3.046 0 0
