--- a/params_planck.ini
+++ b/params_planck.ini
@@ -65,8 +65,7 @@ param[tau] = 0.09 0.01 0.8 0.02 0.01
 
 param[omegak] = 0 0 0 0 0
 
-num_massive_neutrinos=1
-param[mnu] = 0.056 0.056 0.056 0 0
+INCLUDE(batch1/baseline_neutrinos.ini)
 param[w] = -1 -1 -1 0 0
 
 param[ns] = 0.96 0.9 1.1 0.005 0.004
