inifile allows DEFAULT() includes; re-jigged .ini set

--- a/batch1/base.ini
+++ b/batch1/base.ini
@@ -1,9 +1,8 @@
 
-INCLUDE(common_batch1.ini)
-INCLUDE(baseline_neutrinos.ini)
+DEFAULT(common_batch1.ini)
 
 #Root name for files produced
-file_root = test_base
+file_root = base
 
 use_HST = F
 use_mpk = F
@@ -14,23 +13,6 @@ use_SN = F
 #Covariance matrix can be produced using getdist program.
 propose_matrix = planck_CAMspec.covmat
 
-#If we are including tensors
-compute_tensors = F
-
-#parameter start center, min, max, start width, st. dev. estimate
-
-param[omegak] = 0 0 0 0 0
-param[w] = -1 -1 -1 0 0 
-param[nt] = 0 0 0 0 0
-param[nrun] = 0 0 0 0 0
-param[r] = 0 0 0 0 0
-
-param[wa] = 0 0 0 0 0
-param[nnu] = 3.046 3.046 3.046 0 0
-param[yhe] = 0.24 0.24 0.24 0 0
-param[alpha1] = 0 0 0 0 0
-param[deltazrei] = 0.5 0.5 0.5 0 0
-param[Alens] = 1 1 1 0 0
-param[fdm] = 0 0 0 0 0
+#no extra parameter variations
 
 
