--- a/batch1/common_batch1.ini
+++ b/batch1/common_batch1.ini
@@ -6,33 +6,14 @@ local_dir = %LOCALDIR%
 #directory, e.g. window functions in directory windows under data_dir
 data_dir = %LOCALDIR%data/
 
-
 INCLUDE(likelihood_batch1.ini)
+INCLUDE(params_CMB_defaults.ini)
 
 #Feedback level ( 2=lots,1=chatty,0=none)
 feedback = 1
 
 #Force computation of sigma_8 even if use_mpk = F
 get_sigma8 = F
-
-#If using tensors, enforce n_T = -A_T/(8A_s)
-inflation_consistency = T
-
-#Set Y_He from BBN constraint; if false set to fixed value of 0.24 by default.
-bbn_consistency=T 
-
-param[omegabh2] = 0.0222 0.005 0.1 0.0003 0.0002
-param[omegach2] = 0.12 0.001 0.99 0.003 0.002
-param[theta] = 1.0414 0.5 10 0.001 0.0004
-param[tau] = 0.09 0.01 0.8 0.02 0.01
-
-param[ns] = 0.96 0.9 1.1 0.005 0.004
-#log[10^10 A_s]
-param[logA] = 3.1096 2.7 4 0.001 0.001
-
-#SZ amplitude, as in WMAP analysis
-param[asz]= 0 0 0 0 0
-
 
 #Temperature at which to Monte-Carlo
 temperature = 1
