--- a/batch1/likelihood_batch1.ini
+++ b/batch1/likelihood_batch1.ini
@@ -7,6 +7,8 @@ use_min_zre = 0
 #clik likelihood file
 clik_likefile = /path/to/CAMspec_v4.1.clik
 
+INCLUDE(batch1/CAMspec_defaults.ini)
+
 #filenames for CMB datasets and SZ templates (added to C_l times parameter(13))
 #Note you may need to change lmax in cmbtypes.f90 to use small scales (e.g. lmax=2100)
 cmb_numdatasets = 0
