--- a/batch1/base_mnu.ini
+++ b/batch1/base_mnu.ini
@@ -2,9 +2,9 @@
 DEFAULT(common_batch1.ini)
 
 #Root name for files produced
-file_root = base_HST_w
+file_root = base_mnu
 
-use_HST = T
+use_HST = F
 use_mpk = F
 use_BBN = F
 use_SN = F
@@ -13,7 +13,7 @@ use_SN = F
 #Covariance matrix can be produced using getdist program.
 propose_matrix = planck_CAMspec.covmat
 
-#parameter start center, min, max, start width, st. dev. estimate
+#no extra parameter variations
 
-param[w] = -1 -1 -0.3 0.02 0.02
-
+num_massive_neutrinos=3
+param[mnu] = 0 0 5 0.1 0.03
