--- a/params_planck.ini
+++ b/params_planck.ini
@@ -3,7 +3,6 @@
 #Want to define and use file of standard Planck chain settings
 INCLUDE(common_params.ini)
 
-
 #Root name for files produced
 file_root = myPlanckTest
 
@@ -45,48 +44,5 @@ get_sigma8 = F
 #Covariance matrix can be produced using getdist program.
 propose_matrix = planck.covmat
 
-#CAMB parameters
-#If we are including tensors
-compute_tensors = F
-#If using tensors, enforce n_T = -A_T/(8A_s)
-inflation_consistency = T
+DEFAULT(batch1/params_CMB_defaults.ini)
 
-
-#Set Y_He from BBN constraint; if false set to fixed value of 0.24 by default.
-bbn_consistency=T 
-
-#parameter start center, min, max, start width, st. dev. estimate
-
-param[omegabh2] = 0.0222 0.005 0.1 0.0003 0.0002
-param[omegach2] = 0.12 0.001 0.99 0.003 0.002
-param[theta] = 1.0414 0.5 10 0.001 0.0004
-param[tau] = 0.09 0.01 0.8 0.02 0.01
-
-
-param[omegak] = 0 0 0 0 0
-
-INCLUDE(batch1/baseline_neutrinos.ini)
-param[w] = -1 -1 -1 0 0
-
-param[ns] = 0.96 0.9 1.1 0.005 0.004
-
-param[nt] = 0 0 0 0 0
-param[nrun] = 0 0 0 0 0
-
-#log[10^10 A_s]
-param[logA] = 3.1096 2.7 4 0.001 0.001
-param[r] = 0 0 0 0 0
-#SZ amplitude, as in WMAP analysis
-param[asz]= 0 0 0 0 0
-
-param[wa] = 0 0 0 0 0
-param[nnu] = 3.046 3.046 3.046 0 0
-#Note yhe is not used if  bbn_consistency=T 
-param[yhe] = 0.24 0.24 0.24 0 0
-param[alpha1] = 0 0 0 0 0
-param[deltazrei] = 0.5 0.5 0.5 0 0
-param[Alens] = 1 1 1 0 0
-
-#CosmoRec dark matter annihilation parameter, 0910.3663
-#Compile with CosmoRec to use this; note fdm has units of 1e-23.
-param[fdm] = 0 0 0 0 0
