--- a/batch1/params_CMB_defaults.ini
+++ b/batch1/params_CMB_defaults.ini
@@ -36,3 +36,6 @@ param[logA] = 3.1096 2.7 4 0.001 0.001
 #SZ amplitude, as in WMAP analysis
 param[asz]= 0 0 0 0 0
 
+#file used by CAMB
+highL_unlensed_cl_template = ./camb/HighLExtrapTemplate_lenspotentialCls.dat
+
