--- a/params.ini
+++ b/params.ini
@@ -5,7 +5,7 @@ file_root = chains/test
 
 DEFAULT(params_planck.ini)
 
-#action = 0:  MCMC, action=1: postprocess .data file, action=2: find best fit point only
+#action = 0:  MCMC, action=1: postprocess .data file, action=2: find best fit point (and Hessian) only
 action = 0
 
 #filenames for CMB datasets and SZ templates (added to C_l times parameter(13))
