--- a/camb/params.ini
+++ b/camb/params.ini
@@ -37,14 +37,16 @@ omnuh2         = 0
 omk            = 0
 hubble         = 70
 
-use_tabulated_w = F
-#effective equation of state parameter for ppf dark energy w=w0, and wa for variation
+#effective equation of state parameter for dark energy
 w              = -1
-wa             = 0
-#if use_tabulated_w read (a,w) from the following user-supplied file instead of above
-wafile = wa.dat
 #constant comoving sound speed of the dark energy (1=quintessence)
 cs2_lam        = 1
+
+#varying w is not supported by default, compile with EQUATIONS=equations_ppf to use crossing PPF w-wa model:
+#wa             = 0
+##if use_tabulated_w read (a,w) from the following user-supplied file instead of above
+#use_tabulated_w = F
+#wafile = wa.dat
 
 #if use_physical = F set parameters as here
 #omega_baryon   = 0.0462
@@ -97,26 +99,24 @@ re_delta_redshift    = 1.5
 re_ionization_frac   = -1
 
 
-#RECFAST 1.5 recombination parameters;
+#RECFAST 1.5.x recombination parameters;
 RECFAST_fudge = 1.14
 RECFAST_fudge_He = 0.86
 RECFAST_Heswitch = 6
 RECFAST_Hswitch  = T
 
-#---------------------------------------------------------------------------------------
-# CosmoRec parameters
+# CosmoRec parameters - compile with RECOMBINATION=cosmorec and link to CosmoRec to use these
 #
 # cosmorec_runmode== 0: CosmoRec run with diffusion
 #                    1: CosmoRec run without diffusion
 #                    2: Recfast++ run (equivalent of the original Recfast version)
 #                    3: Recfast++ run with correction function of Chluba & Thomas, 2010
 #
-# For 'cosmorec_accuracy' and 'cosmorec_fdm' see CosmoRec for explaination
+# For 'cosmorec_accuracy' and 'cosmorec_fdm' see CosmoRec for explanation
 #---------------------------------------------------------------------------------------
-cosmorec_runmode        = 0 
-cosmorec_accuracy       = 0 
-cosmorec_fdm            = 0 
-
+#cosmorec_runmode        = 0
+#cosmorec_accuracy       = 0
+#cosmorec_fdm            = 0
 
 #Initial scalar perturbation mode (adiabatic=1, CDM iso=2, Baryon iso=3, 
 # neutrino density iso =4, neutrino velocity iso = 5) 
@@ -192,6 +192,9 @@ bispectrum_export_alpha_beta=F
 
 #If feedback_level > 0 print out useful information computed about the model
 feedback_level = 1
+
+#write out various derived parameters
+derived_parameters = T
 
 # 1: curved correlation function, 2: flat correlation function, 3: inaccurate harmonic method
 lensing_method = 1
