New visual studio files; ini updates

--- a/batch1/common_batch1.ini
+++ b/batch1/common_batch1.ini
@@ -13,7 +13,7 @@ INCLUDE(params_CMB_defaults.ini)
 feedback = 1
 
 #Force computation of sigma_8 even if use_mpk = F
-get_sigma8 = F
+get_sigma8 = T
 
 #Temperature at which to Monte-Carlo
 temperature = 1
