--- a/batch1/likelihood_batch1.ini
+++ b/batch1/likelihood_batch1.ini
@@ -1,8 +1,15 @@
 use_CMB = T
 use_clik = T
+
+use_HST = F
+use_mpk = F
+use_BBN = F
+use_SN = F
+
 use_lya = F
 use_clusters = F
 use_min_zre = 0
+
 
 #clik likelihood file
 clik_likefile = /path/to/CAMspec_v4.1.clik
