CAMB Oct 2012 RC; new minimization/EstCovMat routines

--- a/source/Makefile
+++ b/source/Makefile
@@ -1,9 +1,12 @@
+#use "make RECOMBINATION=cosmorec" to build with CosmoRec rather than RECFAST default
+
 #You may need to edit the library paths for MKL for Intel
-#Beware of using optimizations that lose accuracy - may give errors when running
 
 ##Uncomment the next line to include dr7 LRG
 EXTDATA =
 #EXTDATA = LRG
+
+RECOMBINATION ?=recfast
 
 #set WMAP empty not to compile with WMAP
 WMAP = /home/aml1005/WMAP7/likelihood_v4
@@ -12,10 +15,12 @@ WMAP = /home/aml1005/WMAP7/likelihood_v4
 cfitsio = /usr/local/cfitsio/intel10/64/3.040
 
 #GSL only needed for DR7 LRG
-GSLPATH = /home/aml1005/libs/gsl
+GSLPATH ?= /home/aml1005/libs/gsl
+
 
 IFLAG = -I
-INCLUDE=
+INCLUDE =
+
 
 #Intel MPI (assuming mpif77 set to point to ifort)
 #these settings for ifort 11.1 and higher; may need to add explicit link directory otherwise
@@ -51,12 +56,6 @@ cfitsio = $(CFITSIO)
 WMAP = $(COSMOLIB)/WMAP7
 GSLPATH = $(GSL_ROOT)
 endif
-
-#Intel fortran 8, check you have the latest update from the Intel web pages
-#See Makefile_intel for ifc 7.1 or lower (some versions have problems)
-#F90C     = ifort
-#FFLAGS = -O2 -Vaxlib -ip -W0 -WB -openmp -fpp
-#LAPACKL = -L/opt/intel/mkl61/lib/32 -lmkl_lapack -lmkl_ia32 -lguide -lpthread
 
 #G95; make sure LAPACK and MPI libs also compiled with g95
 #F90C     = mpif90
@@ -126,14 +125,16 @@ CLSFILE = CMB_Cls_simple.o
 PARAMETERIZATION = params_CMB.o
 
 F90FLAGS = -DMATRIX_SINGLE $(FFLAGS) $(IFLAG)../camb $(INCLUDE)
-LINKFLAGS = -L../camb -lcamb $(LAPACKL)
+LINKFLAGS = -L../camb -lcamb_$(RECOMBINATION) $(LAPACKL) $(F90CRLINK) 
 
 DISTFILES = ParamNames.o Matrix_utils.o settings.o IO.o GetDist.o
 
-OBJFILES=  ParamNames.o Matrix_utils.o settings.o IO.o cmbtypes.o Planck_like.o  \
+LIKEFILES= calclike.o
+
+OBJFILES = ParamNames.o Matrix_utils.o settings.o IO.o cmbtypes.o Planck_like.o  \
 	cmbdata.o WeakLen.o bbn.o lrggettheory.o mpk.o bao.o supernovae.o HST.o SDSSLy-a-v3.o \
-	$(CLSFILE) paramdef.o $(PROPOSE) $(PARAMETERIZATION) calclike.o \
-	conjgrad_wrapper.o EstCovmat.o postprocess.o MCMC.o driver.o
+	$(CLSFILE) paramdef.o $(PROPOSE) $(PARAMETERIZATION) $(LIKEFILES) \
+	EstCovmat.o PowellConstrainedMinimize.o minimize.o postprocess.o MCMC.o driver.o
 
 
 ifeq ($(EXTDATA),LRG)
@@ -141,6 +142,23 @@ F90FLAGS += -DDR71RG
 OBJFILES += bsplinepk.o
 GSLINC = -I$(GSLPATH)/include
 LINKFLAGS += -L$(GSLPATH)/lib -lgsl -lgslcblas
+endif
+
+F90CRLINK =
+
+ifeq ($(RECOMBINATION),cosmorec)
+## This is flag is passed to the Fortran compiler allowing it to link C++ (uncomment the right one).
+# GCC (gfortran/g++)
+COSMOREC_PATH ?= ../CosmoRec/
+F90CRLINK = -lstdc++ -L$(COSMOREC_PATH) -lCosmoRec -L$(GSLPATH)/lib -lgsl -lgslcblas
+# Intel Compilers (ifort/icpc)
+#F90CRLINK = -cxxlib -L$(COSMOREC_PATH) -lCosmoRec -L$(GSLPATH)/lib -lgsl -lgslcblas
+FFLAGS +=  -DCOSMOREC
+endif
+
+ifeq ($(RECOMBINATION),hyrec)
+HYREC_PATH ?= ../HyRec/
+F90CRLINK += -L$(HYREC_PATH) -lhyrec
 endif
 
 ifneq ($(WMAP),)
@@ -166,7 +184,7 @@ default: cosmomc
 
 all : cosmomc getdist
 
-settings.o: ../camb/libcamb.a
+settings.o: ../camb/libcamb_$(RECOMBINATION).a
 cmbtypes.o: settings.o
 Planck_like.o: cmbtypes.o
 cmbdata.o: Planck_like.o  $(WMAPOBJS)
@@ -182,11 +200,10 @@ paramdef.o: $(CLSFILE)
 $(PROPOSE): paramdef.o
 $(PARAMETERIZATION): paramdef.o
 calclike.o: $(PARAMETERIZATION)
-conjgrad_wrapper.o: calclike.o
-EstCovmat.o: conjgrad_wrapper.o
 postprocess.o: calclike.o
 MCMC.o: calclike.o
-driver.o: MCMC.o
+driver.o: EstCovmat.o MCMC.o minimize.o
+minimize.o: PowellConstrainedMinimize.o calclike.o
 
 export FFLAGS
 export F90C
@@ -219,4 +236,4 @@ getdist: camb $(DISTFILES)
 	$(F90C) -o ../getdist $(DISTFILES) $(LINKFLAGS) $(F90FLAGS)
 
 camb:
-	cd ../camb && $(MAKE) --file=Makefile_main libcamb.a
+	cd ../camb && $(MAKE) --file=Makefile_main libcamb_$(RECOMBINATION).a RECOMBINATION=$(RECOMBINATION)
