--- a/common_params.ini
+++ b/common_params.ini
@@ -86,9 +86,7 @@ action = 0
 #estimate a good propose matrix. As a byproduct you also get an approx best fit point
 estimate_propose_matrix = F
 
-#Tolerance on log likelihood to use when estimating best fit point
-delta_loglike = 2
-
+max_like_radius = 0.005
 
 use_lya = F
 use_clusters = F
