--- a/params.ini
+++ b/params.ini
@@ -82,8 +82,9 @@ propose_matrix = params_CMB.covmat
 #estimate a good propose matrix. As a byproduct you also get an approx best fit point
 estimate_propose_matrix = F
 
-#Tolerance on log likelihood to use when estimating best fit point
-delta_loglike = 2
+#when estimating best fit point (action=2 or estimate_propose_matrix), 
+#required relative accuracy of each parameter in units of the propose width
+max_like_radius = 0.005
 
 #Scale of proposal relative to covariance; 2.4 is recommended by astro-ph/0405462 for Gaussians
 #If propose_matrix is much broader than the new distribution, make proportionately smaller
