direct camspec replacement for clik file

--- a/batch1/CAMspec_defaults.ini
+++ b/batch1/CAMspec_defaults.ini
@@ -1,15 +1,63 @@
+likefile = %DATASETDIR%camspec/like_dx8_v5.2dust.dat
+beamfile = %DATASETDIR%camspec/beamfile.dat
+sz143file = %DATASETDIR%camspec/tsz_143_eps0.50.dat
+tszxcibfile = %DATASETDIR%camspec/sz_x_cib_template.dat
+kszfile = %DATASETDIR%camspec/cl_ksz_148_trac.dat
+
 #CAMspec nuisance parameters
-param[aps100] = 18 0 20 .5 .5
-param[aps143] = 10 0 30 .5 .5
-param[aps217] = 20 0 50 .5 .5
-param[acib143] = 1 0 5 .1 .1
-param[acib217] = 20 0 80 1 1
-param[asz143] = 1 0 3 .1 .1
-param[psr] = 0.5 0.0 1.0 0.05 0.05
-param[cibr] = 0.5 0.0 1.0 0.05 0.05
-param[cal0] = 1.0 0.98 1.02 0.001 0.001
-param[cal1] = 1.0 1.0 1.0 0 0
-param[cal2] = 1.0 0.98 1.02 0.001 0.001
+
+#Jan's original
+#param[aps100] = 18 0 20 .5 .5
+#param[aps143] = 10 0 30 .5 .5
+#param[aps217] = 20 0 50 .5 .5
+#param[acib143] = 1 0 5 .1 .1
+#param[acib217] = 20 0 80 1 1
+#param[asz143] = 1 0 3 .1 .1
+#param[psr] = 0.5 0.0 1.0 0.05 0.05
+#param[cibr] = 0.5 0.0 1.0 0.05 0.05
+#param[cal0] = 1.0 0.98 1.02 0.001 0.001
+#param[cal1] = 1.0 1.0 1.0 0 0
+#param[cal2] = 1.0 0.98 1.02 0.001 0.001
+
+
+param[aps100] = 20 0 40 2 5
+param[aps143]= 6.1 0 30 .1 5
+param[aps217]= 10.9 0 50 .1 5
+param[acib143]= 10 0 20 1 1
+param[acib217]= 55.5 0 80 .3 10
+param[asz143]= 2.15 0 3 .1 .5
+param[psr]= 0.91 0.0 1.0 0.1 0.1
+param[cibr]= 0.63 0.0 1.0 0.1 0.1
+param[cal0]= 1.0127 1.01 1.02  0.0001 0.0005
+param[cal1]= 1.0 1.0 1.0 0 0
+param[cal2]= 1.0055 0.95 1.05 0.0002 0.001
+param[xi] = .5 0 1 .1 .3
+param[aksz] = 1 0 5 .1 .3
+
+param[beam1]= 0 -5 5 0.1 1
+param[beam2]= 0 0 0 0 0
+param[beam3]= 0 0 0 0 0
+param[beam4]= 0 0 0 0 0
+param[beam5]= 0 0 0 0 0
+param[beam6]= 0 0 0 0 0
+param[beam7]= 0 0 0 0 0
+param[beam8]=0 0 0 0 0
+param[beam9]=0 0 0 0 0
+param[beam10]= 0 0 0 0 0
+param[beam11]= 0 0 0 0 0
+param[beam12]= 0 0 0 0 0
+param[beam13]= 0 0 0 0 0
+param[beam14]= 0 0 0 0 0
+param[beam15]= 0 0 0 0 0
+param[beam16]= 0 0 0 0 0
+param[beam17]= 0 0 0 0 0
+param[beam18]= 0 0 0 0 0
+param[beam19]= 0 0 0 0 0
+param[beam20]= 0 0 0 0 0
+
+use_WMAP_TT_beam_ptsrc = F
+use_WMAP_TE = F 
+use_WMAP_TT = F
 
 #PLik nuisance parameters
 param[norm_rg] = 0 0 0 0 0
