--- a/batch1/PLik_defaults.ini
+++ b/batch1/PLik_defaults.ini
@@ -10,6 +10,29 @@ param[cibr] = 1 1 1 0 0
 param[cal0] = 1.0 1.0 1.0 0 0
 param[cal1] = 1.0 1.0 1.0 0 0
 param[cal2] = 1.0 1.0 1.0 0 0
+param[xi] = 0 0 0 0 0
+param[aksz] = 0 0 0 0 0
+
+param[beam1]= 0 0 0 0 0
+param[beam2]= 0 0 0 0 0
+param[beam3]= 0 0 0 0 0
+param[beam4]= 0 0 0 0 0
+param[beam5]= 0 0 0 0 0
+param[beam6]= 0 0 0 0 0
+param[beam7]= 0 0 0 0 0
+param[beam8]=0 0 0 0 0
+param[beam9]=0 0 0 0 0
+param[beam10]= 0 0 0 0 0
+param[beam11]= 0 0 0 0 0
+param[beam12]= 0 0 0 0 0
+param[beam13]= 0 0 0 0 0
+param[beam14]= 0 0 0 0 0
+param[beam15]= 0 0 0 0 0
+param[beam16]= 0 0 0 0 0
+param[beam17]= 0 0 0 0 0
+param[beam18]= 0 0 0 0 0
+param[beam19]= 0 0 0 0 0
+param[beam20]= 0 0 0 0 0
 
 #PLik nuisance parameters
 param[norm_rg] = 61 0 100 1 1
