--- a/batch1/PLik_defaults.ini
+++ b/batch1/PLik_defaults.ini
@@ -38,3 +38,7 @@ param[beam20]= 0 0 0 0 0
 param[norm_rg] = 61 0 100 1 1
 param[norm_dg_cl] = 3.8 0 10 0.05 0.05
 
+
+use_WMAP_TT_beam_ptsrc = F
+use_WMAP_TE = F 
+use_WMAP_TT = F
