--- a/batch1/likelihood_batch1.ini
+++ b/batch1/likelihood_batch1.ini
@@ -18,8 +18,9 @@ INCLUDE(batch1/CAMspec_defaults.ini)
 
 #filenames for CMB datasets and SZ templates (added to C_l times parameter(13))
 #Note you may need to change lmax in cmbtypes.f90 to use small scales (e.g. lmax=2100)
-cmb_numdatasets = 0
-cmb_dataset1 = %DATASETDIR%Planck.dataset
+cmb_numdatasets = 1
+cmb_dataset1 = WMAP
+#%DATASETDIR%Planck.dataset
 
 #filename for supernovae (default SDSS compilation)
 SN_filename = %DATASETDIR%supernovae.dataset
