--- a/batch1/CAMspec_defaults.ini
+++ b/batch1/CAMspec_defaults.ini
@@ -20,21 +20,21 @@ kszfile = %DATASETDIR%camspec/cl_ksz_148_trac.dat
 #param[cal2] = 1.0 0.98 1.02 0.001 0.001
 
 
-param[aps100] = 20 0 40 2 5
-param[aps143]= 6.1 0 30 .1 5
-param[aps217]= 10.9 0 50 .1 5
-param[acib143]= 10 0 20 1 1
-param[acib217]= 55.5 0 80 .3 10
-param[asz143]= 2.15 0 3 .1 .5
-param[psr]= 0.91 0.0 1.0 0.1 0.1
-param[cibr]= 0.63 0.0 1.0 0.1 0.1
+param[aps100] = 20 0 40 2 4
+param[aps143]= 6.1 0 30 .5 1
+param[aps217]= 6.2 0 50 .5 1
+param[acib143]= 10 0 20 2 3
+param[acib217]= 55.5 0 80 3 3
+param[asz143]= 2.15 0 3 .3 0.5
+param[psr]= 0.91 0.0 1.0 0.04 0.1
+param[cibr]= 0.63 0.0 1.0 0.1 0.2
 param[cal0]= 1.0127 1.01 1.02  0.0001 0.0005
 param[cal1]= 1.0 1.0 1.0 0 0
 param[cal2]= 1.0055 0.95 1.05 0.0002 0.001
-param[xi] = .5 0 1 .1 .3
-param[aksz] = 1 0 5 .1 .3
+param[xi] = .2 0 1 .1 .2
+param[aksz] = 2 0 5 .3 0.6
 
-param[beam1]= 0 -5 5 0.1 1
+param[beam1]= 0.3 -5 5 0.1 0.5
 param[beam2]= 0 0 0 0 0
 param[beam3]= 0 0 0 0 0
 param[beam4]= 0 0 0 0 0
