new camspec par ranges

--- a/batch1/CAMspec_defaults.ini
+++ b/batch1/CAMspec_defaults.ini
@@ -28,9 +28,11 @@ param[acib217]= 55.5 0 80 5 5
 param[asz143]= 2.15 0 3 .6 0.6
 param[psr]= 0.91 0.0 1.0 0.04 0.1
 param[cibr]= 0.63 0.0 1.0 0.2 0.2
-param[cal0]= 1.0127 1.01 1.02  0.0004 0.0005
+##param[cal0]= 1.0127 1.01 1.02  0.0004 0.0005
+param[cal0]= 1 0.98 1.02  0.0004 0.0004
 param[cal1]= 1.0 1.0 1.0 0 0
-param[cal2]= 1.0055 0.95 1.05 0.0005 0.001
+##param[cal2]= 1.0055 0.95 1.05 0.0005 0.001
+param[cal2]= 1 0.95 1.05 0.0015 0.0015
 param[xi] = .2 0 1 .2 .2
 param[aksz] = 2 0 5 .7 0.5
 
