--- a/batch1/base_mnu.ini
+++ b/batch1/base_mnu.ini
@@ -2,7 +2,7 @@
 DEFAULT(common_batch1.ini)
 
 #Root name for files produced
-file_root = base_mnu
+file_root = chains/base_mnu
 
 #Can use covariance matrix for proposal density, otherwise use settings below
 #Covariance matrix can be produced using getdist program.
