--- a/batch1/CAMspec_defaults.ini
+++ b/batch1/CAMspec_defaults.ini
@@ -1,4 +1,4 @@
-likefile = %DATASETDIR%camspec/like_v6.2Fdust
+likefile = %DATASETDIR%camspec/like_v6.2Fdust.dat
 beamfile = %DATASETDIR%camspec/beamfile.dat
 sz143file = %DATASETDIR%camspec/tsz_143_eps0.50.dat
 tszxcibfile = %DATASETDIR%camspec/sz_x_cib_template.dat
