updated for use with clik v4.0 and DX9 & ACT/SPT likelihoods

--- a/params_CAMspec.ini
+++ b/params_CAMspec.ini
@@ -4,7 +4,7 @@
 file_root = chains/test_CAMspec
 
 #clik likelihood file
-clik_likefile = /path/to/CAMspec_v4.1.clik
+clik_likefile = /path/to/Camspec_v5.2dust.clik
 
 cmb_numdatasets = 0
 use_clik = T
