--- a/params_PLik.ini
+++ b/params_PLik.ini
@@ -2,7 +2,7 @@
 file_root = chains/test_PLik
 
 #clik likelihood file
-clik_likefile = /path/to/plik_v2.clik
+clik_likefile = /path/to/plik_dx9_v2.clik
 
 cmb_numdatasets = 0
 use_clik = T
