set clik_likefile in Plik_default, CAMspec_defaults

--- a/batch1/CAMspec_defaults.ini
+++ b/batch1/CAMspec_defaults.ini
@@ -1,6 +1,5 @@
-use_WMAP_TT_beam_ptsrc = F
-use_WMAP_TE = F 
-use_WMAP_TT = F
+#clik likelihood file, when compiling with cliklike
+clik_likefile = /path/to/CAMspec_5.2dust.clik
 
 #these only used if compiling with clicklike_CamSpec
 likefile = %DATASETDIR%camspec/like_v6.2Fdust.dat
@@ -8,6 +7,13 @@ beamfile = %DATASETDIR%camspec/beamfile.dat
 sz143file = %DATASETDIR%camspec/tsz_143_eps0.50.dat
 tszxcibfile = %DATASETDIR%camspec/sz_x_cib_template.dat
 kszfile = %DATASETDIR%camspec/cl_ksz_148_trac.dat
+
+
+use_WMAP_TT_beam_ptsrc = F
+use_WMAP_TE = F 
+use_WMAP_TT = F
+
+
 
 #CAMspec nuisance parameters
 ##Jan's choice
