default path to data/clik

--- a/batch1/PLik_defaults.ini
+++ b/batch1/PLik_defaults.ini
@@ -1,5 +1,5 @@
 #clik likelihood file
-clik_likefile = /path/to/plik_dx9_v2.clik
+clik_likefile = %DATASETDIR%clik/plik_dx9_v2.clik
 
 use_WMAP_TT_beam_ptsrc = F
 use_WMAP_TE = F 
