attempt to rationalise cambspec/plik .ini files with inheritance

--- a/batch1/CAMspec_ACTSPT_defaults.ini
+++ b/batch1/CAMspec_ACTSPT_defaults.ini
@@ -1,73 +1,13 @@
 #clik likelihood file, when compiling with cliklike
 clik_likefile = %DATASETDIR%clik/CAMspec_5.2dust_ACTSPT.clik
 
-#these only used if compiling with clicklike_CamSpec
-likefile = %DATASETDIR%camspec/like_v6.2Fdust.dat
-beamfile = %DATASETDIR%camspec/beamfile.dat
-sz143file = %DATASETDIR%camspec/tsz_143_eps0.50.dat
-tszxcibfile = %DATASETDIR%camspec/sz_x_cib_template.dat
-kszfile = %DATASETDIR%camspec/cl_ksz_148_trac.dat
-
-
-use_WMAP_TT_beam_ptsrc = F
-use_WMAP_TE = F 
-use_WMAP_TT = F
-
-
+DEFAULT(CAMspec_defaults.ini)
 
 #CAMspec nuisance parameters
-
 #Steven&Antony, updated with Erminia's prior ranges for common CAMspec and ACT/SPT nuisance paramters
-param[aps100] = 20 0 40 3 3
-param[aps143]= 6.1 0 30 1 1
-param[aps217]= 6.2 0 50 1 1
-param[acib143]= 10 0 20 4 4
-#param[acib217]= 55.5 0 80 5 5
 param[acib217]= 55.5 0 100 5 5
-param[asz143]= 2.15 0 3 .6 0.6
-param[psr]= 0.91 0.0 1.0 0.04 0.1
-param[cibr]= 0.63 0.0 1.0 0.2 0.2
-param[cal0]= 1 0.98 1.02  0.0004 0.0004
-param[cal1]= 1.0 1.0 1.0 0 0
-param[cal2]= 1 0.95 1.05 0.0015 0.0015
-#param[xi] = .2 0 1 .2 .2
 param[xi] = .2 0 .5 .2 .2
-#param[aksz] = 2 0 5 .7 0.5
 param[aksz] = 2 0 10 .7 .5
-
-param[bm_1_1] = 0.3 -5 5 0.1 0.5
-param[bm_1_2] = 0 0 0 0 0
-param[bm_1_3] = 0 0 0 0 0
-param[bm_1_4] = 0 0 0 0 0
-param[bm_1_5] = 0 0 0 0 0
-param[bm_2_1] = 0 0 0 0 0
-param[bm_2_2] = 0 0 0 0 0
-param[bm_2_2] = 0 0 0 0 0
-param[bm_2_3] = 0 0 0 0 0
-param[bm_2_4] = 0 0 0 0 0
-param[bm_2_5] = 0 0 0 0 0
-param[bm_3_1] = 0 0 0 0 0
-param[bm_3_2] = 0 0 0 0 0
-param[bm_3_3] = 0 0 0 0 0
-param[bm_3_4] = 0 0 0 0 0
-param[bm_3_5] = 0 0 0 0 0
-param[bm_4_1] = 0 0 0 0 0
-param[bm_4_2] = 0 0 0 0 0
-param[bm_4_3] = 0 0 0 0 0
-param[bm_4_4] = 0 0 0 0 0
-param[bm_4_5] = 0 0 0 0 0
-
-#PLik nuisance parameters
-param[A_cib_143] = 20 0 50 0 0
-param[A_cib_217] = 50 0 120 0 0
-param[r_cib] = .5 0 1 0 0
-param[ps_pwfe_A_100_100] = 0.0001 0 0.0002 0 0
-param[ps_pwfe_A_100_143] = 0.0001 0 0.0002 0 0
-param[ps_pwfe_A_100_217] = 0.0001 0 0.0002 0 0
-param[ps_pwfe_A_143_143] = 0.0001 0 0.0002 0 0
-param[ps_pwfe_A_143_217] = 0.0001 0 0.0002 0 0 
-param[ps_pwfe_A_217_217] = 0.0001 0 0.0002 0 0
-param[gal_norm] = 0.0001 0 0.0002 0 0
 
 #ACT/SPT nuisance parameters
 #If combined with CAMspec or PLik, fix the common nuisance parameters here and set them above instead
