--- a/batch1/CAMspec_defaults.ini
+++ b/batch1/CAMspec_defaults.ini
@@ -9,11 +9,7 @@ tszxcibfile = %DATASETDIR%camspec/sz_x_cib_template.dat
 kszfile = %DATASETDIR%camspec/cl_ksz_148_trac.dat
 
 
-use_WMAP_TT_beam_ptsrc = F
-use_WMAP_TE = F 
-use_WMAP_TT = F
-
-
+DEFAULT(all_likelihoods_fixed.ini)
 
 #CAMspec nuisance parameters
 ##Jan's choice
@@ -31,7 +27,6 @@ use_WMAP_TT = F
 #param[xi] = 0.05 0 1 0.001 0.001
 #param[aksz] = 2 0 10 .1 .1
 
-#Steven&Antony
 param[aps100] = 20 0 40 3 3
 param[aps143]= 6.1 0 30 1 1
 param[aps217]= 6.2 0 50 1 1
@@ -46,61 +41,5 @@ param[cal2]= 1 0.95 1.05 0.0015 0.0015
 param[xi] = .2 0 1 .2 .2
 param[aksz] = 2 0 5 .7 0.5
 
-
 param[bm_1_1] = 0.3 -5 5 0.1 0.5
-param[bm_1_2] = 0 0 0 0 0
-param[bm_1_3] = 0 0 0 0 0
-param[bm_1_4] = 0 0 0 0 0
-param[bm_1_5] = 0 0 0 0 0
-param[bm_2_1] = 0 0 0 0 0
-param[bm_2_2] = 0 0 0 0 0
-param[bm_2_2] = 0 0 0 0 0
-param[bm_2_3] = 0 0 0 0 0
-param[bm_2_4] = 0 0 0 0 0
-param[bm_2_5] = 0 0 0 0 0
-param[bm_3_1] = 0 0 0 0 0
-param[bm_3_2] = 0 0 0 0 0
-param[bm_3_3] = 0 0 0 0 0
-param[bm_3_4] = 0 0 0 0 0
-param[bm_3_5] = 0 0 0 0 0
-param[bm_4_1] = 0 0 0 0 0
-param[bm_4_2] = 0 0 0 0 0
-param[bm_4_3] = 0 0 0 0 0
-param[bm_4_4] = 0 0 0 0 0
-param[bm_4_5] = 0 0 0 0 0
 
-#PLik nuisance parameters
-param[A_cib_143] = 20 0 50 0 0
-param[A_cib_217] = 50 0 120 0 0
-param[r_cib] = .5 0 1 0 0
-param[ps_pwfe_A_100_100] = 0.0001 0 0.0002 0 0
-param[ps_pwfe_A_100_143] = 0.0001 0 0.0002 0 0
-param[ps_pwfe_A_100_217] = 0.0001 0 0.0002 0 0
-param[ps_pwfe_A_143_143] = 0.0001 0 0.0002 0 0
-param[ps_pwfe_A_143_217] = 0.0001 0 0.0002 0 0 
-param[ps_pwfe_A_217_217] = 0.0001 0 0.0002 0 0
-param[gal_norm] = 0.0001 0 0.0002 0 0
-
-#ACT/SPT nuisance parameters
-#If combined with CAMspec or PLik, fix the common nuisance parameters here and set them above instead
-param[A_sz_AS] = 1 0 5 0 0
-param[A_ksz_AS] = 1 0 10 0 0
-param[xi_sz_cib_AS] = 0.1 0 1 0 0 
-param[a_ps_act_148] = 1 0 3 0 0
-param[a_ps_act_217] = 9 0 20 0 0
-param[a_ps_spt_95] = 1 0 3 0 0
-param[a_ps_spt_150] = 1 0 3 0 0
-param[a_ps_spt_220] = 8 0 20 0 0
-param[A_cib_143_AS] = 3 0 30 0 0
-param[A_cib_217_AS] = 70 0 150 0 0
-param[r_ps_spt_95x150] = .9 0 1 0 0
-param[r_ps_spt_95x220] = .7 0 1 0 0
-param[r_ps_150x220] = .9 0 1 0 0
-param[r_cib_AS] = .5 0 1 0 0
-param[cal_acts_148] = 1 .9 1.1 0 0
-param[cal_acts_217] = 1 .9 1.1 0 0
-param[cal_acte_148] = 1 .9 1.1 0 0
-param[cal_acte_217] = 1 .9 1.1 0 0
-param[cal_spt_95] = 1 .9 1.1 0 0
-param[cal_spt_150] = 1 .9 1.1 0 0
-param[cal_spt_220] = 1 .9 1.1 0 0
