--- a/batch1/PLik_ACTSPT_defaults.ini
+++ b/batch1/PLik_ACTSPT_defaults.ini
@@ -1,58 +1,11 @@
 #clik likelihood file
 clik_likefile = %DATASETDIR%clik/plik_dx9_v2_ACTSPT.clik
 
-use_WMAP_TT_beam_ptsrc = F
-use_WMAP_TE = F 
-use_WMAP_TT = F
-
-#CAMspec nuisance parameters
-param[aps100] = 20 0 50 0 0
-param[aps143] = 3 0 30 0 0
-param[aps217] = 5 0 30 0 0
-param[acib143] = 18 0 50 0 0
-param[acib217] = 60 0 120 0 0
-param[asz143] = 2 0 5 0 0
-param[psr] = 0.9 0.0 1.0 0 0
-param[cibr] = 0.5 0.0 1.0 0 0
-param[cal0] = 1.013 0.98 1.02 0 0
-param[cal1] = 1.0 1.0 1.0 0 0
-param[cal2] = 1.004 0.98 1.02 0 0
-param[xi] = 0.05 0 1 0 0
-param[aksz] = 2 0 10 0 0
-
-param[bm_1_1] = 0 0 0 0 0
-param[bm_1_2] = 0 0 0 0 0
-param[bm_1_3] = 0 0 0 0 0
-param[bm_1_4] = 0 0 0 0 0
-param[bm_1_5] = 0 0 0 0 0
-param[bm_2_1] = 0 0 0 0 0
-param[bm_2_2] = 0 0 0 0 0
-param[bm_2_3] = 0 0 0 0 0
-param[bm_2_4] = 0 0 0 0 0
-param[bm_2_5] = 0 0 0 0 0
-param[bm_3_1] = 0 0 0 0 0
-param[bm_3_2] = 0 0 0 0 0
-param[bm_3_3] = 0 0 0 0 0
-param[bm_3_4] = 0 0 0 0 0
-param[bm_3_5] = 0 0 0 0 0
-param[bm_4_1] = 0 0 0 0 0
-param[bm_4_2] = 0 0 0 0 0
-param[bm_4_3] = 0 0 0 0 0
-param[bm_4_4] = 0 0 0 0 0
-param[bm_4_5] = 0 0 0 0 0
-
+DEFAULT(PLik_defaults.ini)
 
 #PLik nuisance parameters
 param[A_cib_143] = 5 0 20 1 1
 param[A_cib_217] = 70 0 100 5 1
-param[r_cib] = .5 0 1 .1 .1
-param[ps_pwfe_A_100_100] = 0.0001 0 0.0002 0.00001 0.00001
-param[ps_pwfe_A_100_143] = 0.0001 0 0.0002 0.00001 0.00001
-param[ps_pwfe_A_100_217] = 0.0001 0 0.0002 0.00001 0.00001
-param[ps_pwfe_A_143_143] = 0.0001 0 0.0002 0.00001 0.00001
-param[ps_pwfe_A_143_217] = 0.0001 0 0.0002 0.00001 0.00001
-param[ps_pwfe_A_217_217] = 0.0001 0 0.0002 0.00001 0.00001
-param[gal_norm] = 0.0001 0 0.0002 0.00001 0.00001
 
 #ACT/SPT nuisance parameters
 #If combined with CAMspec or PLik, fix the common nuisance parameters here and set them above instead
