initial attempt at high L theory templating

--- a/batch1/params_CMB_defaults.ini
+++ b/batch1/params_CMB_defaults.ini
@@ -39,3 +39,7 @@ param[asz]= 0 0 0 0 0
 #file used by CAMB
 highL_unlensed_cl_template = ./camb/HighLExtrapTemplate_lenspotentialCls.dat
 
+#defining l_max for actual calculation, and higher L template file
+lmax_computed_cl = 4500
+highL_theory_cl_template = %DATASETDIR%HighL_lensedCls.dat
+
