--- a/batch1/common_batch1.ini
+++ b/batch1/common_batch1.ini
@@ -28,7 +28,10 @@ use_fast_slow = F
 #Scale of proposal relative to covariance; 2.4 is recommended by astro-ph/0405462 for Gaussians
 #If propose_matrix is much broader than the new distribution, make proportionately smaller
 #Generally make smaller if your acceptance rate is too low
-propose_scale = 2.4
+propose_scale = 1.2
+#smaller may help with all the non-Gaussian nuisance parameters
+#propose_scale = 2.4
+
 
 #Increase to oversample fast parameters more, e.g. if space is odd shape
 oversample_fast = 1
