--- a/batch1/nuisance_only_test.ini
+++ b/batch1/nuisance_only_test.ini
@@ -4,6 +4,7 @@ DEFAULT(common_batch1.ini)
 
 MPI_Max_R_ProposeUpdate = 20
 
+propose_scale = 2
 #no WMAP
 cmb_numdatasets = 0
 
@@ -18,7 +19,7 @@ param[logA] = 3.1 2.7 4 0 0
 use_fast_slow = T
 
 
-file_root = chains/test_nuisance
+file_root = chains/test_nuisance2
 
 propose_matrix = planck_CAMspec.covmat
 
