Revert "fix blank lines"
This reverts commit cbe76030c650d45536cd688d3d5c7804162b1758.

--- a/batch1/nuisance_only_test.ini
+++ b/batch1/nuisance_only_test.ini
@@ -4,7 +4,6 @@ DEFAULT(common_batch1.ini)
 
 MPI_Max_R_ProposeUpdate = 20
 
-propose_scale = 2
 #no WMAP
 cmb_numdatasets = 0
 
@@ -19,7 +18,7 @@ param[logA] = 3.1 2.7 4 0 0
 use_fast_slow = T
 
 
-file_root = chains/test_nuisance2
+file_root = chains/test_nuisance
 
 propose_matrix = planck_CAMspec.covmat
 
