--- a/distparams.ini
+++ b/distparams.ini
@@ -1,12 +1,9 @@
 #Params for "getdist" - for processing .txt chain information
 
-DEFAULT(batch1/getdist_common_batch1.ini)
-
 #if zero, columnnum calculated automatically as total number of columns
 columnnum  = 0
 
-file_root = /home/stg20/sandy/cosmomcfromleda/cosmomc/chains/v61n_r1
-#chains/nuisance
+file_root = chains/test
 out_root = 
 out_dir = 
 plot_data_dir = plot_data/
